# NextACC

./: README.md  config.txt
2DVVM/: .gitignore  CMakeLists.txt  README.rst  run.sh  vvm_config.txt
2DVVM/input/: init.txt
2DVVM/src/: AddForcing.cpp  Advection.cpp  Boundary.cpp  Buoyancy.cpp  Config.hpp  Declare.hpp  Init.cpp  Iteration.cpp  MicroPhysics.cpp  NumericalProcess.cpp  Output.cpp  PoissonSolver.cpp  ReadConfig.cpp  ReadConfig.hpp  Timer.hpp  Turbulent.cpp  main.cpp
CSSWM/: .gitignore  CMakeLists.txt  README.rst  csswm_config.txt  run.sh
CSSWM/scripts/: csswm.ctl
CSSWM/src/: bp_wind.cpp  construction.hpp  define.hpp  initialField.cpp  iteration.cpp  main.cpp  numericalProcess.cpp  outputs.cpp  readConfig.cpp  readConfig.hpp  transform.cpp
scripts/: generate_cases.sh  submit_all_cases.sh
